Remove CommandAPI vì quá ngu. Update lại GUI vì cái của stdpi thiếu